// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadedView collapsed snapshot 1`] = `
<Container
  fluid={true}
  size="xl"
>
  <Row>
    <Col
      className="p-0 px-4"
      lg={
        Object {
          "offset": 1,
          "span": 10,
        }
      }
      md={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
      sm={
        Object {
          "offset": 2,
          "span": 8,
        }
      }
      xl={
        Object {
          "offset": 0,
          "span": 8,
        }
      }
      xs={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
    >
      <CourseList />
    </Col>
    <Col
      className="p-0"
      lg={
        Object {
          "offset": 1,
          "span": 10,
        }
      }
      md={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
      sm={
        Object {
          "offset": 2,
          "span": 8,
        }
      }
      xl={
        Object {
          "offset": 0,
          "span": 4,
        }
      }
      xs={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
    >
      <WidgetSidebar />
    </Col>
  </Row>
</Container>
`;

exports[`LoadedView not collapsed snapshot 1`] = `
<Container
  fluid={true}
  size="xl"
>
  <Row>
    <Col
      className="p-0 px-4"
      lg={
        Object {
          "offset": 1,
          "span": 10,
        }
      }
      md={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
      sm={
        Object {
          "offset": 2,
          "span": 8,
        }
      }
      xl={
        Object {
          "offset": 0,
          "span": 8,
        }
      }
      xs={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
    >
      <CourseList />
    </Col>
    <Col
      className="p-0 pl-1 pr-3"
      lg={
        Object {
          "offset": 1,
          "span": 10,
        }
      }
      md={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
      sm={
        Object {
          "offset": 2,
          "span": 8,
        }
      }
      xl={
        Object {
          "offset": 0,
          "span": 4,
        }
      }
      xs={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
    >
      <h2
        className="mb-4.5 display-block"
      >
         
      </h2>
      <WidgetSidebar />
    </Col>
  </Row>
</Container>
`;
